# pacha_insurance

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  postgres-full.yml
agents/approval_pack_agent/: __init__.py  api.py  config.py  conversion.py  merge.py  models.py  note.py  resolver.py  service.py  signing.py  workspace.py
agents/assessment_agent/: __init__.py  cascade.py  dispatch.py  models.py  report.py  selection.py  trigger.py  vendors.py
agents/chase_agent/: __init__.py  api.py  checklist.py  matcher.py  models.py  reminders.py
agents/intake_agent/: __init__.py  assigner.py  classifier.py  flow.py  router.py  triage.py
agents/projection_agent/: __init__.py  adapters.py  api.py  config.py  drift.py  models.py  paste.py  reconcile.py  rpa.py  runner_api.py  service.py  tasks.py
console/: index.html  package-lock.json  package.json  vite.config.ts
console/src/: ConsoleApp.tsx  accessibility.test.tsx  main.tsx  styles.css  vite-env.d.ts
docs/: AGENT_BUILD_GUIDE.md  Full-System_Acceptance_Trial_v1.1.md  PRD-00_Canonical_Claim_Object_and_Event_Spine_v1.1.md  PRD-01_Document_Intelligence_Engine_v1.1.md  PRD-02_COP_Runtime_v1.1.md  PRD-03_Eval_Harness_and_Autonomy_Controller_v1.1.md  PRD-04_Status_Console_and_Review_Queue_v1.1.md  PRD-05_Intake_and_Triage_Agent_v1.1.md  PRD-06_Document_Chase_Agent_v1.1.md  PRD-07_Assessment_Orchestration_Agent_v1.1.md  PRD-08_Approval_Pack_Generator_v1.1.md  PRD-09_System_Projection_and_Reconciliation_v1.1.md  PRD-10_Repair_Lifecycle_Agent_v1.1.md  PRD-11_Salvage_Auction_Platform_v1.1.md  PRD-12_Settlement_and_Finance_Linkage_v1.1.md  PRD-13_Motor_LOB_Pack_v1.1.md  Phase_3_Sequence_and_Open_Items_v1.1.md  Section_0.5_Shared_Agent_Runtime_v1.1.md  Section_0_Shared_Engineering_Decisions_v1.1.md
docs/openapi/: approval_pack.json  projection.json
docs/packets/: PACKET-01_claim_substrate.md  PACKET-02_claim_fsm.md  (+20 more)
tests/: conftest.py
tools/: openapi_snapshot.py
(+305 files in other folders)
